--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8679,7 +8679,7 @@ form input[type="text"] {
 }
 
 .page-welcome .section-search .search {
-  width: 500px;
+  width: 50%;
 }
 
 .page-welcome .section-reg {
