--- a/resources/assets/sass/search.scss
+++ b/resources/assets/sass/search.scss
@@ -9,7 +9,7 @@
       background-position-y: -130px;
       color:#fff;
       .search{
-        width:500px;
+        width:50%;
       }
     }
     &-reg{
